--- a/src/App.css
+++ b/src/App.css
@@ -153,15 +153,41 @@ h4 {
   display: grid;
   grid-template-columns: 1fr 3fr;
   align-items: center;
-  height: 50px;
+  height: 70px;
   background: transparent;
 }
+.navbar-sticky{
+  background: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
+  box-shadow: 1px 1px 1px #fff;
+  animation: moveDown 0.5s ease-in-out;
+}
 .navbar img {
-  height: 10vh;
-  width: 15vw;
+  height: 3rem;
+  width: 10rem;
   cursor: pointer;
   justify-self: start;
   margin-left: 30px;
+  animation: rotate 0.7s ease-in-out 0.5s;
+}
+@keyframes moveDown {
+  from {
+    transform: translateY(-5rem);
+  }
+  to {
+    transform: translateY(0rem);
+  }
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotateY(360deg);
+  }
+  100% {
+    transform: rotateY(0rem);
+  }
 }
 .navbar ul {
   list-style: none;
@@ -261,7 +287,6 @@ h4 {
     width: 50px;
     height: 40px;
     background: transparent;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
     border-radius: 10px;
     display: flex-inline;
     justify-content: center;
@@ -319,7 +344,7 @@ h4 {
     width: 65%;
     justify-self: start;
     margin-left: 30px;
-    margin-top: 5px;
+    margin-top: 10px;
     margin-left: 0.001rem;
   }
   .showcase,
@@ -335,7 +360,7 @@ h4 {
   p {
     font-size: 0.8rem;
   }
-
+  
   .navbar ul {
     display: flex;
     flex-direction: column;
@@ -522,7 +547,7 @@ h4 {
   position: relative;
 }
 #underline1:hover {
-  color: #fff;
+  color: #111;
 }
 #underline1:before {
   content: "";
@@ -531,7 +556,7 @@ h4 {
   height: 2.2px;
   bottom: 0;
   right: 0;
-  background-color: #fff;
+  background-color: #111;
   visibility: hidden;
   transition: all 0.3s ease-in-out;
 }
